--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="static/image/png" href="static/images/favicon.ico">
+    <link rel="icon" type="static/image/png" href="static/images/iconGray.png">
     <title>OPTİK WEB</title>
     <style> canvas {padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px;} </style>
     <style> body {padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px;} </style>
